# Halogen

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: BinaryToHeader.cmake  DownloadFilament.cmake  FindFilament.cmake
docs/: building.md
examples/: CMakeLists.txt  README.md  render_scene.cpp
examples/android-native-surface/: AndroidManifest.xml  README.md  build-apk.sh  main.cpp
examples/android-native-surface/java/com/metaversal/halogen/surfacetest/: MainActivity.java
scripts/: vcvarsall.ps1
src/: Aabb.h  CMakeLists.txt  Camera.cpp  Camera.h  ColorConversion.h  Constants.h  Device.cpp  Device.h  DeviceState.cpp  DeviceState.h  FilamentResource.cpp  FilamentResource.h  Frame.cpp  Frame.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  Instance.cpp  Instance.h  Library.cpp  Light.cpp  Light.h  Material.cpp  Material.h  MathConversions.h  NativeSurface.cpp  NativeSurface.h  Object.h  Renderer.h  Sampler.cpp  Sampler.h  Surface.cpp  Surface.h  World.cpp  World.h
src/Test/: AabbTest.cpp  CMakeLists.txt  ColorConversionTest.cpp  DeviceTest.cpp  GeometryTest.cpp  LightTest.cpp  MaterialTest.cpp  Milestone2Test.cpp  NativeSurfaceTest.cpp  NativeSurfaceWindowTest.cpp  ParameterTest.cpp  RenderTest.cpp  SamplerTest.cpp  ScreenshotTest.cpp  TutorialTest.cpp
src/Test/golden/: coloredQuad.ppm  curveScene.ppm  instancedTriangle.ppm  sphereScene.ppm
src/materials/: matte.filamat  matte.mat  matteBlend.mat  matteMasked.mat  physicallyBased.filamat  physicallyBased.mat  physicallyBasedBlend.mat  physicallyBasedMasked.mat  unlit.mat  unlitBlend.mat  unlitMasked.mat
